Bug 940625 follow-up to fix bustage from changing from DiscardAllSurfacesForVectorImages to DiscardAll. CLOSED TREE